# audiogen.cpp

./: .ckignore  .gitignore  .gitmodules  CMakeLists.txt  HF_README.md  Makefile  README.md  benchmark.py  buildcpu.sh  buildmetal.sh
.claude/hooks/.logs/: hook-log.jsonl
.serena/: project.yml
convert/: convert_dit.py  convert_t5_encoder.py  convert_vocoder.py  inspect_safetensors.py  quantize.py  requirements.txt
docs/: ARCHITECTURE.md
reference/: attention.py  config.json  configuration_dasheng_audiogen.py  configuration_dasheng_tokenizer.py  content_adapter.py  dit.py  modeling_dasheng_audiogen.py  modeling_dasheng_encoder.py  modeling_dasheng_tokenizer.py  modules.py  scheduler.py  tokenizer_config.json  utils.py  vocos.py
reference/.claude/hooks/.logs/: hook-log.jsonl
src/: backend.cpp  backend.h  content_adapter.cpp  content_adapter.h  dit.cpp  dit.h  gguf_util.h  main.cpp  pipeline.cpp  pipeline.h  scheduler.cpp  scheduler.h  t5_encoder.cpp  t5_encoder.h  tokenizer.cpp  tokenizer.h  vocoder.cpp  vocoder.h
